# city

./: .gitattributes  .gitignore  CMakeLists.txt
shaders/: shader.fs  shader.vs  sphere.fs  sphere.vs
src/: CMakeLists.txt  city.cpp  setup.cpp  setup.h  shader.cpp  shader.h  texture.cpp  texture.h
src/shapes/: CMakeLists.txt  building.cpp  building.h  group.cpp  group.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h
stb/: README
